crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__fuzzy_search_advanced-4.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: content2
---
class UserManager {
  async findUser(id, options = {}) {
    const user = await this.db.findOne({ userId: id, ...options });
    if (!user) {
      throw new UserNotFoundError(id);
    }
    return this.sanitizeUser(user);
  }
}
